Misc fixes in project files
Change Jetty variables
Use Incremental Compilation with Zinc compiler
Add stacktraces to test failures